--- a/webtest/index.html
+++ b/webtest/index.html
@@ -223,7 +223,10 @@
 
     <section class="container-fluid">
 <h1 class="text-center">Tour Test</h1>
-<iframe src="../index.htm"  class="mx-auto d-flex" frameborder="0" width="100"  style="width: 81%;height:  915px !important;" > </iframe>
+<iframe src="../index.htm"  class="mx-auto  d-none d-md-flex" frameborder="0" width="100"  style="width: 81%;height:  915px !important;" > </iframe>
+<iframe src="../index.htm"  class="mx-auto  d-flex d-md-none" frameborder="0" width="100"  style="width: 96%;height:  386px !important;" > </iframe>
+
+
     </section>
 
 
